--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
+    "plotly.js": "^2.14.0",
+    "plotly.js-dist": "^2.14.0",
+    "plotly.js-dist-min": "^2.14.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.4.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
